Maybe fix double-scrollbars on ios IV

--- a/app/posts/[slug]/page.module.css
+++ b/app/posts/[slug]/page.module.css
@@ -130,13 +130,12 @@
   /* [class*="language-"] added to increase specificity */
   & pre > code[class*='language-'] {
     /* Code should be formatted to 80 characters */
-    overflow: visible;
     width: 80ch;
     padding: 1em 1.3em;
     box-sizing: content-box;
     display: block;
     margin: 0 auto;
-    overflow: auto;
+    overflow: visible;
     font-size: 0.88rem;
     border-radius: 6px;
   }
